--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+<div class="popup" style="position: absolute; top: 0; left: 0; background-color: grey; width: 100%; height: 100vh; z-index: 999;">
+    <img style="width: 50%; height: auto; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);"
+     alt="" src="./popup.png" width="805" height="314" />
+</div>
+
 <script type="module" src="index.js"></script>
     <div id="zappar-placement-ui">Tap here to place the object</div>
 </body>
